--- a/start/stert-write.html
+++ b/start/stert-write.html
@@ -714,6 +714,14 @@
         <option value="">Select Story Type</option>
         <option value="fiction">Fiction</option>
         <option value="non-fiction">Non-fiction</option>
+        <option value="community-gathering">Community Gathering</option>
+        <option value="history">History</option>
+        <option value="workshop">Workshop</option>
+        <option value="art-&-culture">Art & Culture</option>
+        <option value="memoir">Memoir</option>
+        <option value="documentary">Documentary</option>
+        <option value="innovation">Innovation</option>
+        <option value="workshop">Workshop</option>
       </select>
     </div>
 
